apps/cluster1/restreamer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restreamer
spec:
  template:
    spec:
      hostNetwork: true
      containers:
      - name: restreamer
