apps/cluster1/restreamer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restreamer
  labels:
    app.kubernetes.io/name: restreamer
    app.kubernetes.io/part-of: restreamer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 12080
    name: http
  selector: {}
  type: ClusterIP
